// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Carousel snapshot renders 1`] = `
<div
  className="carousel"
/>
`;

exports[`Carousel CarouselArrow Next snapshot renders 1`] = `
<div
  className="carousel-arrow next"
  onClick={[MockFunction]}
>
  &#9654;
</div>
`;

exports[`Carousel CarouselArrow Prev snapshot renders 1`] = `
<div
  className="carousel-arrow prev"
  onClick={[MockFunction]}
>
  &#9664;
</div>
`;

exports[`Carousel CarouselDetails snapshot renders 1`] = `
<div
  className="carousel-details"
>
  1
   of 
  135
   - 
  Sunflower Picking at Alstede Farm 2018-07-30
   
  <br />
  by 
  brianwhaley
   on 
  2018-07-30 15:21:06
</div>
`;

exports[`Carousel CarouselImage snapshot renders 1`] = `
<div
  className="carousel-image-container"
  id="42079144500"
  style={
    Object {
      "transform": "translateX(100%)",
      "transition": "transform 1.0s ease-in 0.1s",
      "zIndex": 134,
    }
  }
>
  <img
    alt="Sunflower Picking at Alstede Farm 2018-07-30"
    className="carousel-image"
    src="https://farm1.static.flickr.com/852/42079144500_c28146304a.jpg"
    title="Sunflower Picking at Alstede Farm 2018-07-30"
  />
</div>
`;
